homework-3/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: homework-2
  namespace: test3242
  labels:
    my-label: lesson
spec:
  containers:
  - name: app
    image: proferio/homework-2:0.0.1
