homework-3/service-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  type: LoadBalancer
  selector:
    app: homework-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
