homework-3/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kuber-service
spec:
  type: ClusterIP
  selector:
    app: homework-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
